# carradio

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Assets/: DTC.db  carradio.props.json  stations.tsv
carradio.xcodeproj/: project.pbxproj
carradio.xcodeproj/project.xcworkspace/xcuserdata/vinnie.xcuserdatad/: UserInterfaceState.xcuserstate
carradio.xcodeproj/xcshareddata/xcschemes/: carradio.xcscheme
carradio.xcodeproj/xcuserdata/vinnie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
carradio.xcodeproj/xcuserdata/vinnie.xcuserdatad/xcschemes/: xcschememanagement.plist
for etc:init.d:/: README.md  carradio
macstuff/macincludes/: librtlsdr.0.6git.dylib  libusb-1.0.0.dylib  macos_gpiod.c  macos_gpiod.h  rtl-sdr.h
src/: AirplayInput.cpp  AirplayInput.hpp  ArgononeFan.cpp  ArgononeFan.hpp  AudioLineInput.cpp  AudioLineInput.hpp  AudioOutput.cpp  AudioOutput.hpp  BNO055_Compass.cpp  CANBusMgr.cpp  CANBusMgr.hpp  CPUInfo.cpp  CPUInfo.hpp  CanProtocol.hpp  CommonDefs.hpp  CompassSensor.cpp  CompassSensor.hpp  DTCManager.cpp  DTCManager.hpp  DTCcodes.cpp  DTCcodes.hpp  DataBuffer.hpp  DisplayMgr.cpp  DisplayMgr.hpp  DuppaEncoder.cpp  DuppaEncoder.hpp  DuppaKnob.cpp  DuppaKnob.hpp  DuppaLEDRing.cpp  DuppaLEDRing.hpp  ErrorMgr.cpp  ErrorMgr.hpp  Filter.cpp  Filter.hpp  FmDecode.cpp  FmDecode.hpp  FrameDB.cpp  FrameDB.hpp  GMLAN.cpp  GMLAN.hpp  (+71 more)
src/Unused/: BNO055_Compass.cpp  BNO055_Compass.hpp  CompassSensor.cpp  INA219.hpp  MMC5983MA.cpp
